apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.3"

    defaultConfig {
        applicationId "br.com.luisfga.talkingz.app"
        minSdkVersion 22
        targetSdkVersion 29
        versionCode 1
        versionName "0.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
}

repositories {
    jcenter()
    mavenLocal()
 }

dependencies {

//    def core_version = "1.3.2"

//    implementation "androidx.core:core:$core_version" // Java language implementation

    implementation 'br.com.luisfga:talkingz-commons:0.1'

    implementation 'androidx.appcompat:appcompat:1.2.0'                         //base
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'           //base
    implementation 'androidx.recyclerview:recyclerview:1.1.0'                   //base
    implementation 'com.google.android.material:material:1.2.1'                 //base
//    implementation 'androidx.legacy:legacy-support-v4:1.0.0'                    //base

    // Java language implementation
    implementation "androidx.navigation:navigation-fragment:2.3.1"
    implementation "androidx.navigation:navigation-ui:2.3.1"

    implementation 'androidx.preference:preference:1.1.1'
    implementation "androidx.room:room-runtime:2.2.5"                           //Room components
    annotationProcessor "androidx.room:room-compiler:2.2.5"                     //Room components
    androidTestImplementation "androidx.room:room-testing:2.2.5"                //Room components

    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"              //Lifecycle components
    annotationProcessor "androidx.lifecycle:lifecycle-common-java8:2.2.0"       //Lifecycle components

    testImplementation 'junit:junit:4.13'                                       //Tests
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'                   //Tests
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'      //Tests

    implementation "com.google.code.gson:gson:2.8.5" //

    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.14'   //Websocket

    implementation 'commons-io:commons-io:2.6'                                  //Apache Commons IO

    implementation 'androidx.exifinterface:exifinterface:1.3.1'
}